# geminiwebapp-cli

./: .env.example  .gitignore  AGENTS.md  BROWSER_OPERATION.md  README.md  pyproject.toml
.agents/skills/geminiwebapp-cli/: SKILL.md
src/geminiwebapp_cli/: __init__.py  browser.py  cli.py  conf.py  exceptions.py  profile_locks.py  session.py  worker.py
src/geminiwebapp_cli/actions/: __init__.py  auth.py  chats.py  screenshot.py
tests/: test_cli.py  test_live_smoke.py  test_profile_locks.py
