[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "geminiwebapp-cli"
version = "0.1.0"
description = "CLI for driving Gemini through a real Camoufox browser session."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "darwincr" }]
keywords = ["gemini", "camoufox", "playwright", "browser-automation", "cli"]
dependencies = [
    "camoufox>=0.4",
    "playwright<1.60",
    "termcolor",
]

[project.scripts]
geminiwebapp-cli = "geminiwebapp_cli.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/geminiwebapp_cli"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
